--- a/action.yml
+++ b/action.yml
@@ -200,6 +200,10 @@ inputs:
     description: 'Only the issues or the pull requests with an assignee will be marked as stale automatically.'
     default: 'false'
     required: false
+  remove-stale-from-exempt-items:
+    description: 'When stale exempt items are updated, remove the stale label from the exempt item.'
+    default: 'false'
+    required: false
 outputs:
   closed-issues-prs:
     description: 'List of all closed issues and pull requests.'
